[package]
name = "pixel_script"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
anyhow = "1.0.100"

[build-dependencies]
cbindgen = "0.29.2"

[features]
# Default include LUA only.
default = ["lua"]
# Include LUA scripting.
lua = ["dep:mlua"]
