[package]
name = "pixel_script"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
anyhow = "1.0.100"
rustpython = { version = "0.4.0", optional = true, features = ["freeze-stdlib"] }
rand = { version = "0.9.2", features = ["small_rng"] }
parking_lot = "0.12.5"

[build-dependencies]
cbindgen = "0.29.2"

[features]
# Default includes all languages.
default = ["lua", "python"]
# Include LUA scripting.
lua = ["dep:mlua"]
# Include Python scripting.
python = ["dep:rustpython"]

all = ["lua", "python"]