[package]
name = "pixelscript"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
anyhow = "1.0.100"
# rustpython-vm = { version = "0.4.0", default-features = false, features = ["compiler", "codegen", "freeze-stdlib"], optional = true }
# rustpython-compiler = {version = "0.4.0", optional = true}
rand = { version = "0.9.2", features = ["small_rng"] }
parking_lot = "0.12.5"
thread_local = "1.1.9"

[build-dependencies]
cbindgen = "0.29.2"
cc = "1.2.52"
bindgen = "0.72.1"

[features]
# Default includes all languages.
default = ["lua", "python"]
# Include LUA scripting.
lua = ["dep:mlua"]
# Include Python scripting. Via pocketpy
python = []
# Include Python scripting. via rustpython
# rustpython = ["dep:rustpython-vm", "dep:rustpython-compiler"]

all = ["lua", "python"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"